ROC-7939: Use Collections.emptyMap()